; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_dswstate.c_acpi_ds_get_current_walk_state.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_dswstate.c_acpi_ds_get_current_walk_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_walk_state = type { i32 }
%struct.acpi_thread_state = type { %struct.acpi_walk_state* }

@ds_get_current_walk_state = common dso_local global i32 0, align 4
@ACPI_DB_PARSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"Current WalkState %p\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.acpi_walk_state* @acpi_ds_get_current_walk_state(%struct.acpi_thread_state* %0) #0 {
  %2 = alloca %struct.acpi_walk_state*, align 8
  %3 = alloca %struct.acpi_thread_state*, align 8
  store %struct.acpi_thread_state* %0, %struct.acpi_thread_state** %3, align 8
  %4 = load i32, i32* @ds_get_current_walk_state, align 4
  %5 = call i32 @ACPI_FUNCTION_NAME(i32 %4)
  %6 = load %struct.acpi_thread_state*, %struct.acpi_thread_state** %3, align 8
  %7 = icmp ne %struct.acpi_thread_state* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store %struct.acpi_walk_state* null, %struct.acpi_walk_state** %2, align 8
  br label %19

9:                                                ; preds = %1
  %10 = load i32, i32* @ACPI_DB_PARSE, align 4
  %11 = load %struct.acpi_thread_state*, %struct.acpi_thread_state** %3, align 8
  %12 = getelementptr inbounds %struct.acpi_thread_state, %struct.acpi_thread_state* %11, i32 0, i32 0
  %13 = load %struct.acpi_walk_state*, %struct.acpi_walk_state** %12, align 8
  %14 = ptrtoint %struct.acpi_walk_state* %13 to i32
  %15 = call i32 @ACPI_DEBUG_PRINT(i32 %14)
  %16 = load %struct.acpi_thread_state*, %struct.acpi_thread_state** %3, align 8
  %17 = getelementptr inbounds %struct.acpi_thread_state, %struct.acpi_thread_state* %16, i32 0, i32 0
  %18 = load %struct.acpi_walk_state*, %struct.acpi_walk_state** %17, align 8
  store %struct.acpi_walk_state* %18, %struct.acpi_walk_state** %2, align 8
  br label %19

19:                                               ; preds = %9, %8
  %20 = load %struct.acpi_walk_state*, %struct.acpi_walk_state** %2, align 8
  ret %struct.acpi_walk_state* %20
}

declare dso_local i32 @ACPI_FUNCTION_NAME(i32) #1

declare dso_local i32 @ACPI_DEBUG_PRINT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
